fix delete-article response
