# docs/swagger.json
@@ -1010,7 +1010,7 @@
         ],
         "summary": "Remove article from list of saved articles",
         "operationId": "deleteArticle",
-        "description": "Remove saved article from the list of saved articles",
+        "description": "Remove saved article from the user's saved list. Returns updated list of saved article IDs or 204 if none remain",
         "security": [
           {
             "bearerAuth": []
@@ -1028,6 +1028,28 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "Article removed; returning updated list of saved articles",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "savedArticleIds": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      },
+                      "example": [
+                        "6885053253a465a2060a9d8e",
+                        "6885053253a465a2060a9d96"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
           "204": {
             "description": "No content"
           },
